public class Constants {
    public static int ballMass = 0;
    public static int ballRadius = 0;

    public static int tableFriction = 0;
}
