@startuml Server_ClassDiagram

    class Server{
        +ServerSocket serverSocket
        +int port
        +boolean startGame
        +GameManager game
    }

    class Ball{
        -GameManager game
        +Vector coordinate
        +Vector speed
        +boolean isHalf
        +boolean isPotted
        +int number
    }

    class Constants{
        {static}+int ballMass
        {static}+int ballRadius
        {static}+int tableFriction
    }

    class GameManager{
        -Player player1
        -Player player2
        -boolean turn
        -boolean ballsMoving
        -List<Ball> halfs
        -List<Ball> fulls
        -Ball eightBall
        -Ball cueBall
    }

    class MovementManager{
        -GameManager game
    }

    class Player{
        -Socket clientSocket
        -PrintWriter out
        -BufferedReader in
        +boolean hasHalf
    }

    class Vector{
        +int x
        +int y
        +float m
    }

    'java classes
    class Thread

    GameManager *-right- Server

    Player *-- GameManager
    Ball *-- GameManager

    GameManager *-right- Ball
    Vector *-up- Ball

    GameManager *-- MovementManager

    Thread <|-- Ball
@enduml